添加單元測試: - CacheManager - CronTaskManager - FilePermissionRuleManager - FolderListTreeManager - JwtAuthenticationManager - JwtWebSocketHandlerAdapter - TransfersTasksManager
新增:
 - 預先準備集成測試所需的儲存庫

優化:
 - 調整驗證JWT憑證的處理流程以及異常驗證