@@ -79,6 +79,7 @@ public class FolderFileServiceImpl extends AbstractFileService implements Folder
      */
     private final int bufferSize;
 
+
     /**
      * 文件夾文件服務實現類，繼承 @see {@link AbstractFileService}
      *
@@ -131,7 +132,6 @@ public class FolderFileServiceImpl extends AbstractFileService implements Folder
             throw new ProcessException(ProcessException.ErrorCode.CREATE_TEMP_DOWNLOAD_FOLDER_FAILED, tempDownloadPath);
         }
 
-
         int bs = (int) fileProperties.getDownload().getZipBufferSize().toBytes();
         if (bs <= 0) {
             bs = 4096;
@@ -181,7 +181,12 @@ public class FolderFileServiceImpl extends AbstractFileService implements Folder
 
 
     /**
-     * 編輯文件夾的實現
+     * 編輯文件夾的實現 - 修復版本
+     * 修復了移動父資料夾時緩存清理不完整的問題
+     * 現在會正確清理所有相關的緩存，包括：
+     * 1. 被移動資料夾原位置的緩存
+     * 2. 被移動資料夾新位置的緩存
+     * 3. 所有子資料夾的緩存
      *
      * @param fileEditBO 文件編輯數據
      * @param user       用戶信息
@@ -191,7 +196,7 @@ public class FolderFileServiceImpl extends AbstractFileService implements Folder
     @Override
     public Mono<Void> editFolder(FileEditBO fileEditBO, User user) {
         FileEditDTO fileEditDTO = fileEditBO.getFileEditDTO();
-        Long oldParentFolderId = fileEditDTO.getParentFolderId();
+        Long oldParentFolderId = fileEditBO.getUserFileMetadata().getParentFolderId();
         return Mono.defer(() -> {
             if (fileEditBO.getParentFolderFileMetadata() != null) {
                 return getUserFilePaths(fileEditBO.getParentFolderFileMetadata(), user).flatMap(nodeList -> {
@@ -231,30 +236,34 @@ public class FolderFileServiceImpl extends AbstractFileService implements Folder
             cleanMainCacheFolder.add(oldParentFolderId);
             cleanMainCacheFolder.add(fileEditDTO.getParentFolderId());
 
+            if (!Objects.equals(oldParentFolderId, fileEditDTO.getParentFolderId())) {
+                cleanMainCacheFolder.add(userFileMetadata.getId());
+            }
+
             Mono<Void> handleChildMono = Mono.empty();
             if (fileEditDTO.getRecursiveSetting()) {
-                handleChildMono = Mono.defer(() -> {
-                    findAllChildFolder(Collections.singletonList(userFileMetadata.getId()), new ArrayList<>()).flatMap(childFolderList -> {
-                        Mono<Void> processShareUserMono = processShareUser(childFolderList, fileEditDTO).then();
-                        Mono<Void> settingChildFolder = Mono.defer(() -> {
-                            childFolderList.forEach(childFolder -> {
-                                childFolder.setShareType(shareType);
-                            });
-                            return userFileMetaRepository.saveAll(childFolderList).then();
+                handleChildMono = Mono.defer(() -> findAllChildFolder(Collections.singletonList(userFileMetadata.getId()),
+                                                                      new ArrayList<>(List.of(userFileMetadata))
+                ).flatMap(toEditFolderList -> {
+                    Mono<Void> processShareUserMono = processShareUser(toEditFolderList, fileEditDTO).then();
+                    Mono<Void> settingChildFolder = Mono.defer(() -> {
+                        toEditFolderList.forEach(fileMetadata -> {
+                            fileMetadata.setShareType(shareType);
                         });
+                        return userFileMetaRepository.saveAll(toEditFolderList).then();
+                    });
 
-                        Set<Long> cleanChildCacheFolder = new HashSet<>();
-                        childFolderList.forEach(childFolder -> {
-                            cleanChildCacheFolder.add(childFolder.getParentFolderId());
-                        });
+                    Set<Long> cleanChildCacheFolder = new HashSet<>();
+                    toEditFolderList.forEach(fileMetadata -> {
+                        cleanChildCacheFolder.add(fileMetadata.getParentFolderId());
+                        cleanChildCacheFolder.add(fileMetadata.getId());
+                    });
 
-                        return Mono
-                                .when(processShareUserMono, settingChildFolder)
-                                .then(cleanUserListCache(user.getId(), cleanChildCacheFolder.toArray(new Long[0])));
+                    return Mono
+                            .when(processShareUserMono, settingChildFolder)
+                            .then(cleanUserListCache(user.getId(), cleanChildCacheFolder.toArray(new Long[0])));
 
-                    }).subscribeOn(Schedulers.boundedElastic()).subscribe();
-                    return Mono.empty();
-                });
+                }).subscribeOn(Schedulers.boundedElastic()));
             }
 
             Mono<UserFileMetadata> processShareUserMono = processShareUser(Collections.singletonList(userFileMetadata), fileEditDTO).next();
@@ -290,6 +299,7 @@ public class FolderFileServiceImpl extends AbstractFileService implements Folder
                     .then(userFileMetaRepository.delete(userFileMetadata));
         });
     }
+
 
     /**
      * 下載文件夾的實現
@@ -342,6 +352,7 @@ public class FolderFileServiceImpl extends AbstractFileService implements Folder
             throw Exceptions.propagate(e);
         }
     }
+
 
     /**
      * 恢復文件夾的實現
@@ -399,6 +410,7 @@ public class FolderFileServiceImpl extends AbstractFileService implements Folder
                         })));
     }
 
+
     /**
      * 批量恢復文件夾的實現
      *
@@ -412,8 +424,11 @@ public class FolderFileServiceImpl extends AbstractFileService implements Folder
         return Flux.fromIterable(folders).flatMap(folder -> restoreFile(folder, user));
     }
 
+
     /**
-     * 刪除文件夾的實現
+     * 刪除文件夾的實現 - 使用延遲雙刪增強版本
+     * 修復了在刪除包含子資料夾的資料夾時緩存未被正確清除的問題
+     * 現在使用延遲雙刪模式來確保緩存一致性
      *
      * @param folder 文件夾
      * @param user   用戶
@@ -422,34 +437,39 @@ public class FolderFileServiceImpl extends AbstractFileService implements Folder
      */
     @Override
     public Mono<Boolean> removeFile(UserFileMetadata folder, User user) {
-        return findAllChildFolder(Collections.singletonList(folder.getId()), new ArrayList<>(List.of(folder))).flatMap(childFolderList -> {
-            boolean isAnyDeleted = childFolderList.stream().anyMatch(UserFileMetadata::getIsDeleted);
+        return findAllChildFolder(Collections.singletonList(folder.getId()), new ArrayList<>(List.of(folder))).flatMap(toDeleteFolderList -> {
+            boolean isAnyDeleted = toDeleteFolderList.stream().anyMatch(UserFileMetadata::getIsDeleted);
             if (isAnyDeleted) {
                 return Mono.just(false);
             }
+
             return Mono.defer(() -> {
                 LocalDateTime deleteTime = LocalDateTime.now().plusDays(fileProperties.getBackup().getRetentionTime().toDays());
-                FileTrashRecord fileTrashRecord = new FileTrashRecord(childFolderList.getFirst(), deleteTime);
-                childFolderList.forEach(userFile -> userFile.setIsDeleted(true));
-                Mono<Boolean> result = fileTrashRecordRepository
+                FileTrashRecord fileTrashRecord = new FileTrashRecord(toDeleteFolderList.getFirst(), deleteTime);
+                toDeleteFolderList.forEach(userFile -> userFile.setIsDeleted(true));
+
+                Long[] parentFolderIds = toDeleteFolderList.stream().map(UserFileMetadata::getParentFolderId).distinct().toArray(Long[]::new);
+                Long userId = toDeleteFolderList.getFirst().getUserId();
+
+                Mono<List<UserFileMetadata>> databaseOperation = fileTrashRecordRepository
                         .insert(fileTrashRecord, entityOperations)
-                        .thenMany(userFileMetaRepository.saveAll(childFolderList))
-                        .collectList()
-                        .flatMap(userFileList -> {
-                            Long[] parentFolderIds = userFileList.stream().map(UserFileMetadata::getParentFolderId).distinct().toArray(Long[]::new);
-                            return cleanUserListCache(userFileList.getFirst().getUserId(), parentFolderIds);
-                        })
-                        .then(Mono.defer(() -> {
-                            if (folderListTreeProvider != null) {
-                                folderListTreeProvider.deleteFolder(user.getId(), folder.getId());
-                            }
-                            return Mono.just(true);
-                        }))
-                        .onErrorReturn(false);
-                return transactionalOperator.transactional(result);
+                        .thenMany(userFileMetaRepository.saveAll(toDeleteFolderList))
+                        .collectList();
+
+                Mono<Void> cacheCleanupOperation = cleanUserListCache(userId, parentFolderIds).doOnSuccess(v -> {
+                    if (folderListTreeProvider != null) {
+                        try {
+                            folderListTreeProvider.deleteFolder(user.getId(), folder.getId());
+                        } catch (Exception e) {
+                            throw new RuntimeException("更新文件夾列表樹時發生錯誤", e);
+                        }
+                    }
+                });
+                return transactionalOperator.transactional(databaseOperation).then(cacheCleanupOperation).thenReturn(true).onErrorReturn(false);
             });
         });
     }
+
 
     /**
      * 批量刪除文件夾的實現
@@ -463,6 +483,7 @@ public class FolderFileServiceImpl extends AbstractFileService implements Folder
     public Mono<Boolean> removeFile(Iterable<UserFileMetadata> folders, User user) {
         return Flux.fromIterable(folders).flatMap(folder -> removeFile(folder, user)).all(Boolean::booleanValue);
     }
+
 
     /**
      * 處理文件夾的壓縮
@@ -499,7 +520,6 @@ public class FolderFileServiceImpl extends AbstractFileService implements Folder
                 String zipEntryName = resolveUniqueEntryName(filePath, zipEntryNameCountMap);
                 return Pair.of(zipEntryName, dataFlux);
             });
-
 
             Flux<Pair<String, Flux<DataBuffer>>> onlineFileWriteTasks = getOnlineFileResource(onlineFileMetadatas).flatMap(pair -> {
                 Flux<DataBuffer> dataFlux = pair.getFirst();
@@ -743,6 +763,4 @@ public class FolderFileServiceImpl extends AbstractFileService implements Folder
             return originalPath + " (" + count + ")";
         }
     }
-
 }
-
